--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,7 +57,21 @@
     <string name="an_bi_eagle">Eagle</string>
     <string name="an_bi_condor">Condor</string>
     <string name="an_bi_hummingbird">Hummingbird</string> -->
-    <string name="an_bi_crow">Crow</string>
+    <string name="an_bi_blackbird">Blackbird</string>
+    <string name="an_bi_bluetit">Blue tit</string>
+    <string name="an_bi_bullfinch">Bullfinch</string>
+    <string name="an_bi_chaffinch">Chaffinch</string>
+    <string name="an_bi_dove">Dove</string>
+    <string name="an_bi_greenfinch">Green finch</string>
+    <string name="an_bi_housesparrow">House sparrow</string>
+    <string name="an_bi_kestrel">Kestrel</string>
+    <string name="an_bi_longtailedtit">Long-tailed tit</string>
+    <string name="an_bi_nuthatch">Nuthatch</string>
+    <string name="an_bi_robins">Robins</string>
+    <string name="an_bi_wagtail">Wagtail</string>
+    <string name="an_bi_waxwing">Waxwing</string>
+    <string name="an_bi_willowwarbler">Willow warbler</string>
+    <string name="an_bi_woodpecker">Woodpecker</string>
 
     <!-- Animals Mammals -->
     <string name="an_ma_african_wild_dog">African wild dog</string>
@@ -122,7 +136,19 @@
     <string name="na_fl_tulip">Tulip</string>
 
     <!-- Nature Herbs -->
-    <string name="na_he_wort">Wort</string>
+    <string name="na_he_basil">Basil</string>
+    <string name="na_he_chervil">Chervil</string>
+    <string name="na_he_chive">Chive</string>
+    <string name="na_he_lemonbalm">Lemon balm</string>
+    <string name="na_he_lovage">Lovage</string>
+    <string name="na_he_marjoram">Marjoram</string>
+    <string name="na_he_mint">Mint</string>
+    <string name="na_he_oregano">Oregano</string>
+    <string name="na_he_parsley">Parsley</string>
+    <string name="na_he_rosemary">Rosemary</string>
+    <string name="na_he_sage">Sage</string>
+    <string name="na_he_tarragon">Tarragon</string>
+    <string name="na_he_thyme">Thyme</string>
 
     <!-- Flags Africa -->
     <string name="co_af_algeria_dz">Algeria</string>
