--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,8 @@
     <string name="home_text">Games</string>
     <string name="category_text">Categories</string>
     <string name="quiz_text">Quiz</string>
-    <string name="question_text">Question Text</string>
+    <string name="question_text">Choose the picture showing the</string>
+    <string name="sort_text">Armadillo</string>
     <string name="q_button_text">Continue</string>
 
     <!-- Games -->
