--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="title_activity_nature_herbs">Herbs</string>
     <string name="home_text">Games</string>
     <string name="category_text">Categories</string>
-    <string name="quiz_text">Quiz</string>
+    <string name="quiz_text"> </string>
     <string name="question_text">Choose the picture showing the</string>
     <string name="sort_text">Armadillo</string>
     <string name="q_button_text">Continue</string>
