--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="home_text">Games</string>
     <string name="category_text">Categories</string>
     <string name="quiz_text"> </string>
-    <string name="question_text">Choose the picture showing the</string>
+    <string name="question_text">Placeholder question</string>
     <string name="sort_text">Armadillo</string>
     <string name="q_button_text">Continue</string>
 
@@ -590,6 +590,16 @@
     <!-- Math -->
 
     <!-- Words -->
+    <string name="wo_astronaut">an Astronaut</string>
+    <string name="wo_foldingrule">a Folding Rule</string>
+    <string name="wo_microscope">a Microscope</string>
+    <string name="wo_secateurs">the Secateurs</string>
+    <string name="wo_steamlocomotive">a Steam Locomotive</string>
+    <string name="wo_stethoscope">a Stethoscope</string>
+    <string name="wo_thimble">a Thimble</string>
+    <string name="wo_wheelbarrow">a Wheelbarrow</string>
+    <string name="wo_wrench">a Wrench</string>
+    <string name="wo_xylophone">a Xylophone</string>
 
     <!-- End Screen -->
     <string name="perfectscore">Perfect score!!! 10 of 10</string>
