saved continue button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="category_text">Categories</string>
     <string name="quiz_text"> </string>
     <string name="question_text">Placeholder question</string>
+    <string name="text_on_pic">Text On Picture</string>
     <string name="sort_text">Armadillo</string>
     <string name="q_button_text">Continue</string>
 
