några formuleringsfrågor kvar att fundera över...

--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -39,59 +39,59 @@
     <string name="flag_question">Välj flaggan som tillhör</string>
     <string name="capital_question">Vad heter huvudstaden i</string>
     <string name="words_question">Välj rätt bild för</string>
-    <string name="an_bi_blackbird">Koltrast</string>
-    <string name="an_bi_bluetit">Blåmes</string>
-    <string name="an_bi_bullfinch">Domherre</string>
-    <string name="an_bi_chaffinch">Bofink</string>
-    <string name="an_bi_dove">Duva</string>
-    <string name="an_bi_greenfinch">Grönfink</string>
-    <string name="an_bi_housesparrow">Gråsparv</string>
-    <string name="an_bi_kestrel">Falk</string>
-    <string name="an_bi_longtailedtit">Stjärtmes</string>
-    <string name="an_bi_nuthatch">Nötväcka</string>
-    <string name="an_bi_robins">Rödhake</string>
-    <string name="an_bi_wagtail">Sädesärla</string>
-    <string name="an_bi_waxwing">Sidensvans</string>
-    <string name="an_bi_willowwarbler">Lövsångare</string>
-    <string name="an_bi_woodpecker">Hackspett</string>
-    <string name="an_ma_african_wild_dog">Afrikansk vildhund</string>
-    <string name="an_ma_armadillo">Armadillo</string>
-    <string name="an_ma_baboon">Babian</string>
-    <string name="an_ma_bear">Björn</string>
-    <string name="an_ma_bengal_tiger">Bengalisk tiger</string>
-    <string name="an_ma_bighorn_sheep">Mufflonfår</string>
-    <string name="an_ma_bobcat">Lodjur</string>
-    <string name="an_ma_buffalo">Buffel</string>
-    <string name="an_ma_camel">Kamel</string>
-    <string name="an_ma_cheetah">Gepard</string>
-    <string name="an_ma_chimpanzee">Chimpans</string>
-    <string name="an_ma_dolphin">Delfin</string>
-    <string name="an_ma_donkey">Åsna</string>
-    <string name="an_ma_elephant">Elefant</string>
-    <string name="an_ma_ferret">Iller</string>
-    <string name="an_ma_fox">Räv</string>
-    <string name="an_ma_giraffe">Giraff</string>
-    <string name="an_ma_guinea_pig">Marsvin</string>
-    <string name="an_ma_hippopotamus">Flodhäst</string>
-    <string name="an_ma_koala">Koala</string>
-    <string name="an_ma_lemur">Lemur</string>
-    <string name="an_ma_lion">Lejon</string>
-    <string name="an_ma_moose">Älg</string>
-    <string name="an_ma_mouse">Mus</string>
-    <string name="an_ma_orca">Späckhuggare</string>
-    <string name="an_ma_panda">Panda</string>
-    <string name="an_ma_rabbit">Kanin</string>
-    <string name="an_ma_raccoon">Tvättbjörn</string>
-    <string name="an_ma_red_panda">Kattbjörn</string>
-    <string name="an_ma_riesen">Utter</string>
-    <string name="an_ma_seal">Säl</string>
-    <string name="an_ma_sheep">Får</string>
-    <string name="an_ma_squirrel">Ekorre</string>
-    <string name="an_ma_surikat">Surikat</string>
-    <string name="an_ma_wallaby">Vallaby</string>
-    <string name="an_ma_walrus">Valross</string>
-    <string name="an_ma_wolf">Varg</string>
-    <string name="an_ma_zebra">Zebra</string>
+    <string name="an_bi_blackbird">en Koltrast</string>
+    <string name="an_bi_bluetit">en Blåmes</string>
+    <string name="an_bi_bullfinch">en Domherre</string>
+    <string name="an_bi_chaffinch">en Bofink</string>
+    <string name="an_bi_dove">en Duva</string>
+    <string name="an_bi_greenfinch">en Grönfink</string>
+    <string name="an_bi_housesparrow">en Gråsparv</string>
+    <string name="an_bi_kestrel">en Falk</string>
+    <string name="an_bi_longtailedtit">en Stjärtmes</string>
+    <string name="an_bi_nuthatch">en Nötväcka</string>
+    <string name="an_bi_robins">en Rödhake</string>
+    <string name="an_bi_wagtail">en Sädesärla</string>
+    <string name="an_bi_waxwing">en Sidensvans</string>
+    <string name="an_bi_willowwarbler">en Lövsångare</string>
+    <string name="an_bi_woodpecker">en Hackspett</string>
+    <string name="an_ma_african_wild_dog">en Afrikansk vildhund</string>
+    <string name="an_ma_armadillo">en Armadillo</string>
+    <string name="an_ma_baboon">en Babian</string>
+    <string name="an_ma_bear">en Björn</string>
+    <string name="an_ma_bengal_tiger">en Bengalisk tiger</string>
+    <string name="an_ma_bighorn_sheep">ett Mufflonfår</string>
+    <string name="an_ma_bobcat">ett Lodjur</string>
+    <string name="an_ma_buffalo">en Buffel</string>
+    <string name="an_ma_camel">en Kamel</string>
+    <string name="an_ma_cheetah">en Gepard</string>
+    <string name="an_ma_chimpanzee">en Chimpans</string>
+    <string name="an_ma_dolphin">en Delfin</string>
+    <string name="an_ma_donkey">en Åsna</string>
+    <string name="an_ma_elephant">en Elefant</string>
+    <string name="an_ma_ferret">en Iller</string>
+    <string name="an_ma_fox">en Räv</string>
+    <string name="an_ma_giraffe">en Giraff</string>
+    <string name="an_ma_guinea_pig">ett Marsvin</string>
+    <string name="an_ma_hippopotamus">en Flodhäst</string>
+    <string name="an_ma_koala">en Koala</string>
+    <string name="an_ma_lemur">en Lemur</string>
+    <string name="an_ma_lion">ett Lejon</string>
+    <string name="an_ma_moose">en Älg</string>
+    <string name="an_ma_mouse">en Mus</string>
+    <string name="an_ma_orca">en Späckhuggare</string>
+    <string name="an_ma_panda">en Panda</string>
+    <string name="an_ma_rabbit">en Kanin</string>
+    <string name="an_ma_raccoon">en Tvättbjörn</string>
+    <string name="an_ma_red_panda">en Kattbjörn</string>
+    <string name="an_ma_riesen">en Utter</string>
+    <string name="an_ma_seal">en Säl</string>
+    <string name="an_ma_sheep">ett Får</string>
+    <string name="an_ma_squirrel">en Ekorre</string>
+    <string name="an_ma_surikat">en Surikat</string>
+    <string name="an_ma_wallaby">en Vallaby</string>
+    <string name="an_ma_walrus">en Valross</string>
+    <string name="an_ma_wolf">en Varg</string>
+    <string name="an_ma_zebra">en Zebra</string>
     <string name="na_fl_chrysanthemum">Krysantemum</string>
     <string name="na_fl_coltsfoot">Tussilago</string>
     <string name="na_fl_cornflower">Blåklint</string>
